components/example-apps/reusable-pipeline/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: java-maven
  name: java-maven
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: java-maven
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: java-maven
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/quickstart-app-java-maven-cd-bundle/java-maven
        imagePullPolicy: Always
        name: java-maven
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
