components/example-apps/reusable-pipeline/app-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: java-maven
  name: java-maven
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: java-maven
    weight: 100
  wildcardPolicy: None
